# CMCXX_templates

./: .gitignore  .gitmodules  README.md
exe_lib/: CMakeLists.txt
exe_lib/lib/: CMakeLists.txt
exe_lib/lib/src/: lib.cpp
exe_lib/src/: main.cpp
library_bundle/: build.sh
library_bundle/sources/Engine/: CMakeLists.txt  en2.cpp  engine.cpp  engine.h
library_bundle/sources/Engine/libA/: CMakeLists.txt  libA.h
library_bundle/sources/Engine/libA/libB/: CMakeLists.txt  libB.cpp  libB.h
library_bundle/sources/Executable/: CMakeLists.txt  executable.cpp
opengl/: CMakeLists.txt
opengl/lib/: CMakeLists.txt
opengl/lib/include/: lib.h
opengl/lib/src/: lib.cpp
opengl/src/: main.cpp
